--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-<title>Guideline Template</title>
+<title>Change.org Foundation Guidelines</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/png" href="//static.change.org/favicon/favicon-32x32.png">
@@ -362,7 +362,7 @@ h5 {
     </div>    
   </div>
     
-      <div class="w3-row-padding">
+      <div class="w3-row-padding" style="margin-top: 20px;">
     <div class="w3-half w3-margin-bottom">
       <ul class="w3-ul w3-light-grey w3-center">
         <li class="w3-dark-grey w3-xlarge w3-padding-32">Visual Tone</li>
