updating header title + adding image

--- a/index.html
+++ b/index.html
@@ -170,6 +170,40 @@ h5 {
     border: none;
     border-bottom: 2px solid #dbd9db;
 }
+    .card-container-left {
+	background-color: #fff;
+	border-radius: 10px;
+	box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
+	display: flex;
+	max-width: 100%;
+	margin: 20px;
+	overflow: hidden;
+	width: 700px;
+}
+
+.card-preview-left {
+	background-color: #fff;
+	border-right: 1px solid #000;
+	color: #fff;
+	padding: 30px;
+	max-width: 250px;
+}
+
+.card-preview-left a {
+	color: #fff;
+	display: inline-block;
+	font-size: 12px;
+	opacity: 0.6;
+	margin-top: 30px;
+	text-decoration: none;
+}
+
+.card-info-right {
+	padding: 30px;
+	position: relative;
+	width: 100%;
+}
+
 </style>
 <body>
 
@@ -204,11 +238,21 @@ h5 {
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:340px;margin-right:40px">
 
+
     <!-- Header title -->
-  <div class="w3-row-padding" style="margin-top:80px" id="about">
+<!--  <div class="w3-row-padding" style="margin-top:80px;" id="about">
     <h1 class="w3-jumbo"><b>Our brand identity</b></h1>
+    </div>-->
+    
+    <div class="w3-row-padding" style="border-radius: 15px; background-color: #F6F4F6; margin-top: 30px !important;">
+    <div class="w3-half">
+    <h1 class="w3-jumbo" style="padding: 10%"><b>Our brand identity</b></h1>
     </div>
-  
+      <div class="w3-half" style="text-align: center;">
+    <img src="img/team.png" style="width: 80%; opacity: 1!important;cursor: auto !important" alt="">
+    </div>
+  </div>
+    
     <!-- Header boxes -->
   <div class="w3-container" style="margin-top:20px" id="">
       <div class="w3-outline" style="margin-bottom: 20px;">
