changing Red to change.org red

--- a/index.html
+++ b/index.html
@@ -211,15 +211,14 @@ h5 {
 <nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-button w3-hide-large w3-display-topleft" style="width:100%;font-size:22px">Close Menu</a>
   <div class="w3-container">
+<!--  <img class="w3-padding-64" src="img/Foundation-logotype_white%20(1).png" style="width: 100%; opacity: 1!important;cursor: auto !important" alt="">-->
     <h3 class="w3-padding-64" style="color:#fff"><b>Change.org<br>Foundation</b></h3>
   </div>
   <div class="w3-bar-block">
     <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">About us</a> 
-    <a href="#logo" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Logo guide</a> 
-    <a href="#fonts" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Fonts &amp; icons</a> 
-    <a href="#colors" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Colors</a> 
-    <a href="#writing" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Writing guide</a> 
-    <a href="#voice" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Voice and tone</a> 
+    <a href="#logo" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Logo &amp; Design</a> 
+    <a href="#fonts" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Templates</a> 
+    <a href="#colors" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Writing guide</a> 
   </div>
 </nav>
 
@@ -240,9 +239,6 @@ h5 {
 
 
     <!-- Header title -->
-<!--  <div class="w3-row-padding" style="margin-top:80px;" id="about">
-    <h1 class="w3-jumbo"><b>Our brand identity</b></h1>
-    </div>-->
     
     <div class="w3-row-padding" style="border-radius: 15px; background-color: #F6F4F6; margin-top: 30px !important;">
     <div class="w3-half">
@@ -547,7 +543,7 @@ h5 {
 </div>
 
 <!-- W3.CSS Container -->
-<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></p></div>
+<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Made with love by the LAB team</p></div>
 
 <script>
 // Script to open and close sidebar
