Adding zip with all country logos to download

--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@ These guidelines provide you with everything you need to create materials for th
           <h4 class="modal-title">Download Logo Files</h4>
         </div>
         <div class="modal-body">
-          <p>Download <a href="img/ar-logo.zip" download="Foundation-logo.png">all country logos</a></p>
+          <p>Download <a href="img/Country-logos.zip" download="Foundation-logo.png">all country logos</a></p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn-outline" data-dismiss="modal">Close</button>
