--- a/index.html
+++ b/index.html
@@ -757,13 +757,13 @@ select {
     <!-- 3 columnns logo images -->
   <div class="w3-row-padding">
     <div class="w3-col m4 w3-margin-bottom">
-<img src="img/Logo/Foundation/logo-fdn.png" style="width:100%; border: 1px solid #8bc34a; padding: 50px 30px;" alt="Logo usage 1"><p style="font-size: 14px; padding-right: 10px; color: #737273; text-align: left;"><i class="fa fa-check" style="color: #8bc34a">&nbsp;</i>The logo should always be used in Change.org red and dark gray for the country name.</p>
+<img src="img/logo-fdn.png" style="width:100%; border: 1px solid #8bc34a; padding: 50px 30px;" alt="Logo usage 1"><p style="font-size: 14px; padding-right: 10px; color: #737273; text-align: left;"><i class="fa fa-check" style="color: #8bc34a">&nbsp;</i>The logo should always be used in Change.org red and dark gray for the country name.</p>
     </div>
   <div class="w3-col m4 w3-margin-bottom">
-<img src="img/logo/Foundation/logo-fdn-w.png" style="width:100%; border: 1px solid #8bc34a; padding: 50px 30px; background-color: #363135; background-image: url('https://static.change.org/brand-pages/impact/Impact-grid-720.jpg'); background-repeat: no-repeat; background-size: cover;" alt="Logo usage 1"><p style="font-size: 14px; padding-right: 10px; color: #737273; text-align: left;"><i class="fa fa-check" style="color: #8bc34a">&nbsp;</i>If you need to use the logo in dark background use it in white.</p>
+<img src="img/logo-fdn-w.png" style="width:100%; border: 1px solid #8bc34a; padding: 50px 30px; background-color: #363135; background-image: url('https://static.change.org/brand-pages/impact/Impact-grid-720.jpg'); background-repeat: no-repeat; background-size: cover;" alt="Logo usage 1"><p style="font-size: 14px; padding-right: 10px; color: #737273; text-align: left;"><i class="fa fa-check" style="color: #8bc34a">&nbsp;</i>If you need to use the logo in dark background use it in white.</p>
     </div>
 <div class="w3-col m4 w3-margin-bottom">
-      <img src="img/logo/Foundation/logo-fdn-plain.png" style="width:100%; border: 1px solid #8bc34a; padding: 50px 30px; background-color: #fff" alt="Logo usage 1"><p style="font-size: 14px; padding-right: 10px; color: #737273; text-align: left;"><i class="fa fa-check" style="color: #8bc34a">&nbsp;</i>If you need to use our logo in text always the “C” and the first letter of the country name is always capitalized.</p>
+      <img src="img/logo-fdn-plain.png" style="width:100%; border: 1px solid #8bc34a; padding: 50px 30px; background-color: #fff" alt="Logo usage 1"><p style="font-size: 14px; padding-right: 10px; color: #737273; text-align: left;"><i class="fa fa-check" style="color: #8bc34a">&nbsp;</i>If you need to use our logo in text always the “C” and the first letter of the country name is always capitalized.</p>
     </div>
   </div>
 <hr class="rule-dashed">
