Icon section.. organization by tag + button to download

--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@ select {
     <!-- Main logo 2 columns -->
   <div class="w3-row-padding">
     <div class="w3-half">
-      <img src="img/logo/Foundation/logo-fdn.png" style="opacity: 1; width:100%; border: 1px solid #DBD9DB; padding: 30px 50px; cursor: auto" alt="Change.org Foundation Logo">
+      <img src="img/logo-fdn.png" style="opacity: 1; width:100%; border: 1px solid #DBD9DB; padding: 30px 50px; cursor: auto" alt="Change.org Foundation Logo">
     </div>
     <div class="w3-half">
       <img src="img/logo-fdn-w.png" style="opacity: 1; width:100%; border: 1px solid #DBD9DB; padding: 30px 50px; background-color: #ED2D23" alt="Change.org Foundation Logo">
@@ -967,81 +967,317 @@ select {
     <p>Clic on any icon to download it as an image without background or download all of them at once with the button below. 
     </p></div>
             <div class="w3-container" style="margin-top:20px">
-    <a href="#" download="FoundationIcons" target="_blank"><button type="button" class="btn-outline">Download the icons repository</button></a>
+    <a href="img/Icons.zip" download="Foundation-Icons" target="_blank"><button type="button" class="btn-outline">Download the icons repository</button></a>
   </div>
-    
+<!--     brand sustainability campaigns users components-->
     <div class="w3-container" style="margin-top:20px" id="filterbuttoncontainer">
   <button class="btn-filter active" onclick="filterSelection('all')"> Show all</button>
-  <button class="btn-filter" onclick="filterSelection('impact')"> Impact</button>
+  <button class="btn-filter" onclick="filterSelection('brand')"> Brand</button>
   <button class="btn-filter" onclick="filterSelection('sustainability')">Sustainability</button>
-  <button class="btn-filter" onclick="filterSelection('users')"> Users</button>
-  <button class="btn-filter" onclick="filterSelection('colors')"> DMs</button>
+  <button class="btn-filter" onclick="filterSelection('campaigns')"> Campaigns</button>
+  <button class="btn-filter" onclick="filterSelection('users')"> Users & comms</button>
+  <button class="btn-filter" onclick="filterSelection('components')"> Components</button>
 </div>
 
 <div class="w3-container container-icons">
-  <div class="filterDiv impact">
-    <a href="img/Country-logos.zip" download="Country-logos.zip">
-        <img src="img/Icons/Icon_conversation.png" style="width:70%" alt=""> 
+  <div class="filterDiv components">
+    <a href="img/Icons/Icon_arrow_left.png" download="Arrow-left.png">
+        <img src="img/Icons/Icon_arrow_left.png" style="width:70%" alt=""> 
     </a>
   </div>
-  <div class="filterDiv impact sustainability">
-        <a href="img/Country-logos.zip" download="Country-logos.zip">
+  <div class="filterDiv components">
+        <a href="img/Icons/Icon_arrow_right.png" download="Arrow-right.png">
+        <img src="img/Icons/Icon_arrow_right.png" style="width:70%" alt=""> 
+    </a>
+    </div>
+  <div class="filterDiv campaigns">    
+      <a href="img/Icons/Icon_balance.png" download="Icon_balance.png">
+        <img src="img/Icons/Icon_balance.png" style="width:70%" alt=""> 
+    </a>
+    </div>
+  <div class="filterDiv brand">
+        <a href="img/Icons/Icon_c-dot.png" download="C-dot.png">
+        <img src="img/Icons/Icon_c-dot.png" style="width:70%" alt=""> 
+    </a>
+    </div>
+  <div class="filterDiv components">
+        <a href="img/Icons/Icon_calendar.png" download="calendar.png">
+        <img src="img/Icons/Icon_calendar.png" style="width:70%" alt=""> 
+    </a>
+    </div>
+  <div class="filterDiv campaigns">
+        <a href="img/Icons/Icon_celebration.png" download="celebration.png">
+        <img src="img/Icons/Icon_celebration.png" style="width:70%" alt=""> 
+    </a>
+    </div>
+  <div class="filterDiv components">
+        <a href="img/Icons/Icon_checkmark.png" download="checkmark.png">
+        <img src="img/Icons/Icon_checkmark.png" style="width:70%" alt=""> 
+    </a>
+    </div>
+  <div class="filterDiv campaigns users">
+        <a href="img/Icons/Icon_computer_discussion.png" download="computer_discussion.png">
+        <img src="img/Icons/Icon_computer_discussion.png" style="width:70%" alt=""> 
+    </a>
+    </div>
+  <div class="filterDiv components">
+        <a href="img/Icons/Icon_computer.png" download="Icon_computer.png">
+        <img src="img/Icons/Icon_computer.png" style="width:70%" alt=""> 
+    </a>
+    </div>
+  <div class="filterDiv campaigns users">
+        <a href="img/Icons/Icon_conversation.png" download="Icon_conversation.png">
         <img src="img/Icons/Icon_conversation.png" style="width:70%" alt=""> 
     </a>
     </div>
-  <div class="filterDiv cars">    
-      <a href="img/Country-logos.zip" download="Country-logos.zip">
-        <img src="img/Icons/Icon_conversation.png" style="width:70%" alt=""> 
+  <div class="filterDiv components">
+        <a href="img/Icons/Icon_digital.png" download="Icon_digital.png">
+        <img src="img/Icons/Icon_digital.png" style="width:70%" alt=""> 
     </a>
     </div>
-  <div class="filterDiv colors">
-        <a href="img/Country-logos.zip" download="Country-logos.zip">
-        <img src="img/Icons/Icon_conversation.png" style="width:70%" alt=""> 
+  <div class="filterDiv sustainability">
+        <a href="img/Icons/Icon_dollar.png" download="Icon_dollar.png">
+        <img src="img/Icons/Icon_dollar.png" style="width:70%" alt=""> 
     </a>
     </div>
-  <div class="filterDiv cars animals">
-        <a href="img/Country-logos.zip" download="Country-logos.zip">
-        <img src="img/Icons/Icon_conversation.png" style="width:70%" alt=""> 
+  <div class="filterDiv campaigns components">
+        <a href="img/Icons/Icon_download.png" download="Icon_download.png">
+        <img src="img/Icons/Icon_download.png" style="width:70%" alt=""> 
     </a>
     </div>
-  <div class="filterDiv colors">
-        <a href="img/Country-logos.zip" download="Country-logos.zip">
-        <img src="img/Icons/Icon_conversation.png" style="width:70%" alt=""> 
+      <div class="filterDiv campaigns users">
+        <a href="img/Icons/Icon_email_and_phone.png" download="Icon_email_and_phone.png">
+        <img src="img/Icons/Icon_email_and_phone.png" style="width:70%" alt=""> 
     </a>
     </div>
-  <div class="filterDiv animals">
-        <a href="img/Country-logos.zip" download="Country-logos.zip">
-        <img src="img/Icons/Icon_conversation.png" style="width:70%" alt=""> 
+      <div class="filterDiv campaigns users">
+        <a href="img/Icons/Icon_email.png" download="Icon_email.png">
+        <img src="img/Icons/Icon_email.png" style="width:70%" alt=""> 
     </a>
     </div>
-  <div class="filterDiv animals">
-        <a href="img/Country-logos.zip" download="Country-logos.zip">
-        <img src="img/Icons/Icon_conversation.png" style="width:70%" alt=""> 
+      <div class="filterDiv campaigns users">
+        <a href="img/Icons/Icon_engage.png" download="Icon_engage.png">
+        <img src="img/Icons/Icon_engage.png" style="width:70%" alt=""> 
     </a>
     </div>
-  <div class="filterDiv fruits">
-        <a href="img/Country-logos.zip" download="Country-logos.zip">
-        <img src="img/Icons/Icon_conversation.png" style="width:70%" alt=""> 
+      <div class="filterDiv sustainability">
+        <a href="img/Icons/Icon_euro.png" download="Icon_euro.png">
+        <img src="img/Icons/Icon_euro.png" style="width:70%" alt=""> 
     </a>
     </div>
-  <div class="filterDiv fruits animals">
-        <a href="img/Country-logos.zip" download="Country-logos.zip">
-        <img src="img/Icons/Icon_conversation.png" style="width:70%" alt=""> 
+      <div class="filterDiv brand components">
+        <a href="img/Icons/Icon_global_community.png" download="Icon_global_community.png">
+        <img src="img/Icons/Icon_global_community.png" style="width:70%" alt=""> 
     </a>
     </div>
-  <div class="filterDiv fruits">
-        <a href="img/Country-logos.zip" download="Country-logos.zip">
-        <img src="img/Icons/Icon_conversation.png" style="width:70%" alt=""> 
+      <div class="filterDiv brand components">
+        <a href="img/Icons/Icon_goals.png" download="Icon_goals.png">
+        <img src="img/Icons/Icon_goals.png" style="width:70%" alt=""> 
     </a>
     </div>
-  <div class="filterDiv fruits">
-        <a href="img/Country-logos.zip" download="Country-logos.zip">
-        <img src="img/Icons/Icon_conversation.png" style="width:70%" alt=""> 
+      <div class="filterDiv sustainability">
+        <a href="img/Icons/Icon_growth_a.png" download="Icon_growth_a.png">
+        <img src="img/Icons/Icon_growth_a.png" style="width:70%" alt=""> 
     </a>
     </div>
-  <div class="filterDiv animals">
-        <a href="img/Country-logos.zip" download="Country-logos.zip">
-        <img src="img/Icons/Icon_conversation.png" style="width:70%" alt=""> 
+      <div class="filterDiv sustainability">
+        <a href="img/Icons/Icon_growth_b.png" download="Icon_growth_b.png">
+        <img src="img/Icons/Icon_growth_b.png" style="width:70%" alt=""> 
+    </a>
+    </div>
+      <div class="filterDiv sustainability">
+        <a href="img/Icons/Icon_growth_c.png" download="Icon_growth_c.png">
+        <img src="img/Icons/Icon_growth_c.png" style="width:70%" alt=""> 
+    </a>
+    </div>
+      <div class="filterDiv users components">
+        <a href="img/Icons/Icon_heart.png" download="Icon_heart.png">
+        <img src="img/Icons/Icon_heart.png" style="width:70%" alt=""> 
+    </a>
+    </div>
+      <div class="filterDiv campaigns">
+        <a href="img/Icons/Icon_highlight_petition.png" download="Icon_highlight_petition.png">
+        <img src="img/Icons/Icon_highlight_petition.png" style="width:70%" alt=""> 
+    </a>
+    </div>
+      <div class="filterDiv campaigns">
+        <a href="img/Icons/Icon_language_training.png" download="Icon_language_training.png">
+        <img src="img/Icons/Icon_language_training.png" style="width:70%" alt=""> 
+    </a>
+    </div>
+      <div class="filterDiv components">
+        <a href="img/Icons/Icon_lightning.png" download="Icon_lightning.png">
+        <img src="img/Icons/Icon_lightning.png" style="width:70%" alt=""> 
+    </a>
+    </div>
+      <div class="filterDiv components">
+        <a href="img/Icons/Icon_location_outline.png" download="Icon_location_outline.png">
+        <img src="img/Icons/Icon_location_outline.png" style="width:70%" alt=""> 
+    </a>
+    </div>
+          <div class="filterDiv components">
+        <a href="img/Icons/Icon_meaningful.png" download="Icon_meaningful.png">
+        <img src="img/Icons/Icon_meaningful.png" style="width:70%" alt="Icon_meaningful"> 
+    </a>
+    </div>
+          <div class="filterDiv campaigns">
+        <a href="img/Icons/Icon_media.png" download="Icon_media.png">
+        <img src="img/Icons/Icon_media.png" style="width:70%" alt="Icon_media"> 
+    </a>
+    </div>
+          <div class="filterDiv campaigns">
+        <a href="img/Icons/Icon_megaphone.png" download="Icon_megaphone.png">
+        <img src="img/Icons/Icon_megaphone.png" style="width:70%" alt="Icon_megaphone"> 
+    </a>
+    </div>
+          <div class="filterDiv components">
+        <a href="img/Icons/Icon_minus.png" download="Icon_minus.png">
+        <img src="img/Icons/Icon_minus.png" style="width:70%" alt="Icon_minus"> 
+    </a>
+    </div>
+          <div class="filterDiv sustainability">
+        <a href="img/Icons/Icon_multi-channel_fundraising_dollar.png" download="Icon_multi-channel_fundraising_dollar.png">
+        <img src="img/Icons/Icon_multi-channel_fundraising_dollar.png" style="width:70%" alt="Icon_multi-channel_fundraising_dollar"> 
+    </a>
+    </div>
+          <div class="filterDiv sustainability">
+        <a href="img/Icons/Icon_multi-channel_fundraising_euro.png" download="Icon_multi-channel_fundraising_euro.png">
+        <img src="img/Icons/Icon_multi-channel_fundraising_euro.png" style="width:70%" alt="Icon_multi-channel_fundraising_euro"> 
+    </a>
+    </div>
+          <div class="filterDiv sustainability">
+        <a href="img/Icons/Icon_multi-channel_fundraising_pound.png" download="Icon_multi-channel_fundraising_pound.png">
+        <img src="img/Icons/Icon_multi-channel_fundraising_pound.png" style="width:70%" alt="Icon_multi-channel_fundraising_pound"> 
+    </a>
+    </div>
+          <div class="filterDiv users">
+        <a href="img/Icons/Icon_new_user.png" download="Icon_new_user.png">
+        <img src="img/Icons/Icon_new_user.png" style="width:70%" alt="Icon_new_user"> 
+    </a>
+    </div>
+          <div class="filterDiv components">
+        <a href="img/Icons/Icon_no.png" download="Icon_no.png">
+        <img src="img/Icons/Icon_no.png" style="width:70%" alt="Icon_no"> 
+    </a>
+    </div>
+          <div class="filterDiv brand components">
+        <a href="img/Icons/Icon_organization_a.png" download="Icon_organization_a.png">
+        <img src="img/Icons/Icon_organization_a.png" style="width:70%" alt="Icon_organization_a"> 
+    </a>
+    </div>
+          <div class="filterDiv brand components">
+        <a href="img/Icons/Icon_organization_b.png" download="Icon_organization_b.png">
+        <img src="img/Icons/Icon_organization_b.png" style="width:70%" alt="Icon_organization_b"> 
+    </a>
+    </div>
+          <div class="filterDiv brand components">
+        <a href="img/Icons/Icon_organization_c.png" download="Icon_organization_c.png">
+        <img src="img/Icons/Icon_organization_c.png" style="width:70%" alt="Icon_organization_c"> 
+    </a>
+    </div>
+          <div class="filterDiv users">
+        <a href="img/Icons/Icon_parents.png" download="Icon_parents.png">
+        <img src="img/Icons/Icon_parents.png" style="width:70%" alt="Icon_parents"> 
+    </a>
+    </div>
+          <div class="filterDiv campaigns">
+        <a href="img/Icons/Icon_pencil.png" download="Icon_pencil.png">
+        <img src="img/Icons/Icon_pencil.png" style="width:70%" alt="Icon_pencil"> 
+    </a>
+    </div>
+              <div class="filterDiv campaigns">
+        <a href="img/Icons/Icon_petitions.png" download="Icon_petitions.png">
+        <img src="img/Icons/Icon_petitions.png" style="width:70%" alt="Icon_petitions"> 
+    </a>
+    </div>
+              <div class="filterDiv components">
+        <a href="img/Icons/Icon_phone.png" download="Icon_phone.png">
+        <img src="img/Icons/Icon_phone.png" style="width:70%" alt="Icon_phone"> 
+    </a>
+    </div>
+              <div class="filterDiv components">
+        <a href="img/Icons/Icon_plus.png" download="Icon_plus.png">
+        <img src="img/Icons/Icon_plus.png" style="width:70%" alt="Icon_plus"> 
+    </a>
+    </div>
+              <div class="filterDiv sustainability">
+        <a href="img/Icons/Icon_pound.png" download="Icon_pound.png">
+        <img src="img/Icons/Icon_pound.png" style="width:70%" alt="Icon_pound"> 
+    </a>
+    </div>
+              <div class="filterDiv users">
+        <a href="img/Icons/icon_profile.png" download="icon_profile.png">
+        <img src="img/Icons/icon_profile.png" style="width:70%" alt="icon_profile"> 
+    </a>
+    </div>
+              <div class="filterDiv sustainability components">
+        <a href="img/Icons/Icon_promote.png" download="Icon_promote.png">
+        <img src="img/Icons/Icon_promote.png" style="width:70%" alt="Icon_promote"> 
+    </a>
+    </div>
+              <div class="filterDiv components">
+        <a href="img/Icons/Icon_question.png" download="Icon_question.png">
+        <img src="img/Icons/Icon_question.png" style="width:70%" alt="Icon_question"> 
+    </a>
+    </div>
+              <div class="filterDiv sustainability components">
+        <a href="img/Icons/Icon_secure.png" download="Icon_secure.png">
+        <img src="img/Icons/Icon_secure.png" style="width:70%" alt="Icon_secure"> 
+    </a>
+    </div>
+              <div class="filterDiv campaigns">
+        <a href="img/Icons/Icon_signature.png" download="Icon_signature.png">
+        <img src="img/Icons/Icon_signature.png" style="width:70%" alt="Icon_signature"> 
+    </a>
+    </div>
+              <div class="filterDiv sustainability components">
+        <a href="img/Icons/Icon_sponsored.png" download="Icon_sponsored.png">
+        <img src="img/Icons/Icon_sponsored.png" style="width:70%" alt="Icon_sponsored"> 
+    </a>
+    </div>
+                  <div class="filterDiv campaigns">
+        <a href="img/Icons/Icon_start_petition.png" download="Icon_start_petition.png">
+        <img src="img/Icons/Icon_start_petition.png" style="width:70%" alt="Icon_start_petition"> 
+    </a>
+    </div>
+                  <div class="filterDiv users">
+        <a href="img/Icons/Icon_supporters.png" download="Icon_supporters.png">
+        <img src="img/Icons/Icon_supporters.png" style="width:70%" alt="Icon_supporters"> 
+    </a>
+    </div>
+                  <div class="filterDiv campaigns components">
+        <a href="img/Icons/Icon_tag.png" download="Icon_tag.png">
+        <img src="img/Icons/Icon_tag.png" style="width:70%" alt="Icon_tag"> 
+    </a>
+    </div>
+                  <div class="filterDiv users">
+        <a href="img/Icons/Icon_targeted_supporters.png" download="Icon_targeted_supporters.png">
+        <img src="img/Icons/Icon_targeted_supporters.png" style="width:70%" alt="Icon_targeted_supporters"> 
+    </a>
+    </div>
+                  <div class="filterDiv components">
+        <a href="img/Icons/Icon_time.png" download="Icon_time.png">
+        <img src="img/Icons/Icon_time.png" style="width:70%" alt="Icon_time"> 
+    </a>
+    </div>
+                  <div class="filterDiv components">
+        <a href="img/Icons/Icon_trending.png" download="Icon_trending.png">
+        <img src="img/Icons/Icon_trending.png" style="width:70%" alt="Icon_trending"> 
+    </a>
+    </div>
+                  <div class="filterDiv components">
+        <a href="img/Icons/Icon_vacation.png" download="Icon_vacation.png">
+        <img src="img/Icons/Icon_vacation.png" style="width:70%" alt="Icon_vacation"> 
+    </a>
+    </div>
+                  <div class="filterDiv campaigns">
+        <a href="img/Icons/Icon_victory_flag.png" download="Icon_victory_flag.png">
+        <img src="img/Icons/Icon_victory_flag.png" style="width:70%" alt="Icon_victory_flag"> 
+    </a>
+    </div>
+                  <div class="filterDiv components">
+        <a href="img/Icons/Icon_worldwide.png" download="Icon_worldwide.png">
+        <img src="img/Icons/Icon_worldwide.png" style="width:70%" alt="Icon_worldwide"> 
     </a>
     </div>
 </div>
