--- a/index.html
+++ b/index.html
@@ -1321,8 +1321,8 @@ select {
   <div class="w3-container" style="margin-top:20px;" id="fonts">
 <div class="w3-outline" style="background-color: #F6F4F6; border: 2px dashed #DBD9DB">
         <div class="w3-container" style="padding: 10px 30px;">
-            <h3 style="margin-top: 10px; line-height: 40px; font-weight: bold !important; font-size: 30px">The quick brown fox jumps over the lazy dog.<br>1234567890!@#$%*</h3><h5 style="font-weight: 300;">Change calibre - bold</h5>
-            <h3 style="margin-top: 10px; line-height: 40px; font-weight: 100 !important; font-size: 30px;">The quick brown fox jumps over the lazy dog.<br>1234567890!@#$%*</h3><h5 style="font-weight: normal">Change calibre - Regular</h5>
+            <h3 style="margin-top: 10px; line-height: 40px; font-weight: bold !important; font-size: 30px">The quick brown fox jumps over the lazy dog.<br>1234567890!@#$%*</h3><h5 style="font-weight: normal;">Change calibre - bold</h5>
+            <h3 style="margin-top: 10px; line-height: 40px; font-weight: normal!important; font-size: 30px;">The quick brown fox jumps over the lazy dog.<br>1234567890!@#$%*</h3><h5 style="font-weight: normal">Change calibre - Regular</h5>
         </div>
     </div> 
   </div>
@@ -1436,7 +1436,7 @@ select {
         </div>
             <div class="w3-half" style="padding: 0px 5px 0px 5px;!important;">
             <p style="margin-bottom: 5px; border: 1px solid #DBD9DB; border-radius: 5px; padding: 30px 50px; font-size: 17px">
-                <img src="img/credible.png" style="margin-bottom: 0px!important; margin-top: 0px!important;opacity: 1!important;cursor: auto!important;" width="35px">&nbsp;&nbsp;&nbsp;<strong>Credible</strong>
+                <img src="img/Credible.png" style="margin-bottom: 0px!important; margin-top: 0px!important;opacity: 1!important;cursor: auto!important;" width="35px">&nbsp;&nbsp;&nbsp;<strong>Credible</strong>
           </p>
         </div>
         </div>
