--- a/index.html
+++ b/index.html
@@ -1335,7 +1335,7 @@ select {
  <!-- Presentations -->     
       <h5 style="font-size: 14px">Presentations</h5>
       <p><strong>Take your presentations to the next level.</strong></p><p>Take a look at these resources that we have grouped together for you. Use this Google Slides guidelines for presentations when representing the Foundation. It includes pre-designed slide templates and guidance to help you create a high-quality, on-brand deck.</p> 
-      <a href="#" target="_blank"><button type="button" class="btn-outline">See slides resources&nbsp;<span class="symbol symbol-link symbol-compact"></span></button></a><p style="margin-top: 0"><i style="font-size: 12px">You will only be able to see this link with your Change.org email account</i></p>
+      <a href="https://docs.google.com/presentation/d/14_7xMKH1iXM0FAYDWTYSi413XWpAmtDXBPXQbYAHuOM/edit?usp=sharing" target="_blank"><button type="button" class="btn-outline">See slides resources&nbsp;<span class="symbol symbol-link symbol-compact"></span></button></a><p style="margin-top: 0"><i style="font-size: 12px">You will only be able to see this link with your Change.org email account</i></p>
       <div class="w3-outline" style="margin-top: 20px; background-color: #FFF9DF; border: 1px solid #F9E3A5; color: #7f6234">
       <div class="w3-container" style="padding: 10px 30px;">
             <p><strong><span class="symbol symbol-notifications symbol-compact" style="color: #7f6234"></span>&nbsp;Use icons from Flaticon's add-on for G Suite</strong></p>
